/* Notes to xform authors */
Levitation import of page 2494 rev 8619.

--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -33,6 +33,7 @@ Upgrading should be smooth.
 === Notes to client authors ===
 
 === Notes to xform authors ===
+config callbacks have changed to xmmsv. But instead use first argument for getting name and value.
 
 === Full ChangeLog ===
 
