--- a/0-/Client:Dabra.mediawiki
+++ b/0-/Client:Dabra.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=Dabra| author=[[Sebastian Sareyko]]| website=http://nooms.de/projects/dabra/| version=[http://nooms.de/media/dabra/dabra-0.1.tar.bz2 0.1]| devlanguage=C| ui=libnotify| screenshots=[http://nooms.de/media/dabra/dabra.png] | description=Dabra is a desktop notification client for the XMMS2 music player. It uses libnotify to display nice popups about what track you're currently listening to.}}
+{{Client| name=Dabra| author=[[Sebastian Sareyko]]| website=http://nooms.de/projects/dabra.html| version=[http://nooms.de/media/dabra/dabra-0.1.tar.bz2 0.1]| devlanguage=C| ui=libnotify| screenshots=[http://nooms.de/files/dabra/dabra.png] | description=Dabra is a desktop notification client for the XMMS2 music player. It uses libnotify to display nice popups about what track you're currently listening to.}}
