--- a/0-/GSoC:2009/Proposed projects.mediawiki
+++ b/0-/GSoC:2009/Proposed projects.mediawiki
@@ -33,4 +33,4 @@ The following ideas are hints at possible projects that we would like to see in 
 an ondisk format called TagCache. This project would be to split the TagCache code from Rockbox out into a library, and then write a service client that given the
 mount point of a rockbox device and the name of a collection would merge that collection to the player. It should hopefully support updating the TagCache on the device, but that can also be done by having the device sync itself. It should also support removing all songs from an arbitrary collection from the device.| lang=C| level=Medium| mentor=N/A}}
 
-{{SoCItem| title=emacs Client library| description=Emacs supports everything, and is a magical land where things are still amazing and special. XMMS2 also fits some of that description, so clearly one should be able to control and program clients for xmms2 from emacs! This project would be to implement the client library in ELisp as well as a small client, or better still EMMS integration.| lang=elisp| Level=Easy to Medium| mentor=N/A}}
+{{SoCItem| title=emacs Client library| description=Emacs supports everything, and is a magical land where things are still amazing and special. XMMS2 also fits some of that description, so clearly one should be able to control and program clients for xmms2 from emacs! This project would be to implement the client library in ELisp as well as a small client, or better still EMMS integration.| lang=elisp| level=Easy to Medium| mentor=N/A}}
