--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -10,6 +10,7 @@ All current clients should be found here.
 {{ClientTableEntry|Azrael| Graphical / GTK | C | development stalled | Basic player with nice additions }}
 {{ClientTableEntry|Blastwave| Graphical / GTK | C | in development | Experimental XMMS2 client }}
 {{ClientTableEntry|bluegroove| Graphical / GTK | Ruby | discontinued | Typical player with queueing support }}
+{{ClientTableEntry|ccx2| Console / ncurses | Python | in development | Customizable onsole client with good support for playlists and searching }}
 {{ClientTableEntry|Chalyx| Library | Python | in development | Flexible modular library for XMMS2/MPD clients }}
 {{ClientTableEntry|Cocopapa| Console | C | in development | Complex Collection Pattern Parser }}
 {{ClientTableEntry|Crystalxmms| Graphical | Java | in development | Look based on crystal icons }}
