--- a/0-/Release:DrMattDestruction.mediawiki
+++ b/0-/Release:DrMattDestruction.mediawiki
@@ -36,6 +36,7 @@ Unsigned integers have been deprecated in favor of plain integers in all server 
 * mpg123
 * nycli
 * flv
+* ape demuxer
 
 ==== Bug fixes ====
 
